🎃 Heads random UUID fix